# xts_acts

./: .gitattributes  OAT.xml  README_migrate0528.md  README_migrate0604.md  README_note.md  README_xts1.2.md  README_zh.md  build.py  ci_uncompile_suite.json  test_packages.gni
ability/ability_runtime/: BUILD.gn
account/appaccount/: BUILD.gn
arkcompiler/arkts_module_normalized_test/: BUILD.gn
arkui/ace_ets_component_common_attrss/: BUILD.gn
arkui/ace_ets_component_seven/: BUILD.gn
communication/: BUILD.gn
communication/bluetooth_ble/: build-profile.json5
communication/bluetooth_ble_static/: BUILD.gn  Test.json
communication/bluetooth_bp/: Test.json
communication/bluetooth_bp_static/: BUILD.gn  Test.json
communication/bluetooth_br_static/: BUILD.gn  Test.json
communication/bluetooth_capi/: oh-package.json5
communication/bluetooth_nop_static/: BUILD.gn  Test.json  build-profile.json5
communication/btmanager_switchoff_static/: BUILD.gn  Test.json
communication/fusion/: BUILD.gn  Test.json
communication/fusion_nop/: BUILD.gn  Test.json
communication/nfc_ControllerStatic/: BUILD.gn  Test.json
communication/wifi_capi/: oh-package.json5
communication/wifi_enterprise/: BUILD.gn  Test.json
communication/wifi_error_ok/: BUILD.gn  Test.json  build-profile.json5  oh-package.json5
communication/wifi_ets_standard/: build-profile.json5
communication/wifi_manager_nop_static/: BUILD.gn  Test.json
communication/wifi_standard_static/: BUILD.gn  Test.json
communication/wifimanager_switchoff_static/: BUILD.gn  Test.json  build-profile.json5
graphic/: BUILD.gn
graphic/ActsDrawingNativeTest/: BUILD.gn  Test.json  build-profile.json5
graphic/ActsGraphicGlesExtensionTest/: BUILD.gn  Test.json
graphic/ActsGraphicNapiFontTest/: BUILD.gn  Test.json  oh-package.json5
graphic/ActsGraphicVulkanNapiTest/: BUILD.gn  Test.json  build-profile.json5
graphic/LandscapeWindow/: Test.json  oh-package.json5
graphic/acts_display/: Test.json  build-profile.json5
graphic/acts_drawing_native/: BUILD.gn  DrawingCanvasDrawRecordCmdTest.cpp  DrawingNativeBitmapTest.cpp  DrawingNativeBrushTest.cpp  DrawingNativeCanvasPartSixTest.cpp  DrawingNativeCanvasTest.cpp  DrawingNativeCanvasTestPart2.cpp  DrawingNativeCanvasTestPart3.cpp  DrawingNativeCanvasTestPart4.cpp  DrawingNativeCanvasTestPart5.cpp  DrawingNativeColorFilterTest.cpp  DrawingNativeColorSpaceTest.cpp  DrawingNativeColorTest.cpp  DrawingNativeFilterTest.cpp  DrawingNativeFontTest.cpp  DrawingNativeFontTestPart2.cpp  DrawingNativeGpuContextTest.cpp  DrawingNativeImageFilterTest.cpp  DrawingNativeImageTest.cpp  DrawingNativeLatticeTest.cpp  DrawingNativeMaskFilterTest.cpp  DrawingNativeMatrixTest.cpp  DrawingNativeMatrixTestPart2.cpp  DrawingNativeMemoryStreamTest.cpp  DrawingNativePathEffectTest.cpp  DrawingNativePathIteratorTest.cpp  DrawingNativePathTest.cpp  DrawingNativePathTestPart2.cpp  DrawingNativePathTestPart3.cpp  DrawingNativePenTest.cpp  DrawingNativePixelMapTest.cpp  DrawingNativePointTest.cpp  DrawingNativeRectTest.cpp  DrawingNativeRegionTest.cpp  DrawingNativeRoundRectTest.cpp  DrawingNativeSamplingOptionsTest.cpp  DrawingNativeShaderEffectTest.cpp  DrawingNativeShadowLayerTest.cpp  DrawingNativeSurFaceTest.cpp  DrawingNativeTextBlobTest.cpp  (+5 more)
graphic/acts_graphicXTSDrawing/: build-profile.json5
graphic/acts_graphicXTSDrawingBrush_static/: BUILD.gn  Test.json
graphic/acts_graphicXTSDrawingCanvas_static/: BUILD.gn  Test.json
graphic/acts_graphicXTSDrawingFont_static/: BUILD.gn  Test.json  hvigorfile.ts
graphic/acts_graphicXTSDrawingMatrix_static/: BUILD.gn  Test.json
graphic/acts_graphicXTSDrawingPathEffect_static/: BUILD.gn  Test.json
graphic/acts_graphicXTSDrawingPath_static/: BUILD.gn  Test.json  build-profile.json5
graphic/acts_graphicXTSDrawingPen_static/: BUILD.gn  Test.json
graphic/acts_graphicXTSDrawingRegion_static/: BUILD.gn  Test.json
graphic/acts_graphicXTSDrawingTextBlob_static/: BUILD.gn  Test.json
graphic/acts_graphicXTSDrawing_static/: BUILD.gn  Test.json  build-profile.json5
graphic/acts_pipwindow/: Test.json
graphic/acts_windowCompatibilityTest/: Test.json
graphic/displayManager/: Test.json  build-profile.json5  oh-package.json5
graphic/displayNdk/: Test.json  build-profile.json5
graphic/displayNdkApi14/: Test.json  build-profile.json5
graphic/gltest/: BUILD.gn  Test.json  cpOpenGL.sh  genlocal.py
graphic/graphic3DStatic/: BUILD.gn  Test.json  build-profile.json5
graphic/graphicColorSpaceStatic/: BUILD.gn  Test.json
graphic/graphicDisplaySyncStatic/: BUILD.gn  Test.json  build-profile.json5  hvigorfile.ts
graphic/graphicDrawingFont/: Test.json
graphic/graphicEffectKitStatic/: BUILD.gn  Test.json
graphic/graphicGL4/: BUILD.gn  Test.json
graphic/graphicGLES3/: BUILD.gn  oh-package.json5
graphic/graphicGLES3v2/: BUILD.gn
graphic/graphicGlesExtension/: BUILD.gn  graphicGlesExtension.cpp
graphic/graphicHdrStatic/: BUILD.gn  Test.json
graphic/graphicImage/: BUILD.gn  Test.json  build-profile.json5
graphic/graphicImageStatic/: BUILD.gn  Test.json  oh-package.json5
graphic/graphicText/: Test.json
graphic/graphicTextStatic/: BUILD.gn  Test.json  build-profile.json5
graphic/graphicUiEffectStatic/: BUILD.gn  Test.json  build-profile.json5  code-linter.json5
graphic/graphicnapidrawingtest/: BUILD.gn  NativeCopyStyleTest.cpp  NativeDrawingFontMgrTest.cpp  NativeFontTest.cpp  NativeTextLineTest.cpp  NativeTextRunTest.cpp  NativeTypographyTestAutoSpace.cpp  NativeTypographyUpdate.cpp  NativeUndefinedGlyphDisplayTest.cpp  OH_Drawing_TypographyTest.cpp
graphic/graphics2DTestApi20/: BUILD.gn  Test.json  log.txt
graphic/graphicvulkannapitest/: VulkanTest.cpp
graphic/nativeColorSpaceNdk/: build-profile.json5
graphic/nativeDisplaySoloistNdk/: build-profile.json5  oh-package.json5
graphic/nativeFontNdk/: oh-package.json5
graphic/nativebuffer/: Test.json  build-profile.json5
hiviewdfx/: BUILD.gn
multimedia/: BUILD.gn
multimodalinput/: BUILD.gn
powermgr/: BUILD.gn
storage/: BUILD.gn
web/: BUILD.gn
web/DFX/: BUILD.gn
(+54115 files in other folders)
