# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos_var.gni")
group("hiviewdfxtestacts") {
  testonly = true
  if (is_standard_system) {
    deps = [
      "hiappeventtest/hiappevent:ActsPerformanceAnalysis20Test",
      "abilityconstanttest:ActsAbilityConstantTest",
      "apprecoverytest:ActsAppRecoveryTest",
      "apprecoveryteststatic:ActsAppRecoveryStaticTest",
      "bytracetest:ActsBytraceJsTest",
      "errormangertest/errormangertest:ActsErrormangerTest",
      "faultlogtest/faultloggerndktest:ActsFaultExTest",
      "faultlogtest/faultloggerndkteststatic:ActsFaultExStaticTest",
      "hiappeventtest/hiappeventapmtest:ActsHiAppEventJsTest",
      "hiappeventtest/hiappeventcpptest:ActsHiAppEventCPPTest",
      "hiappeventtest/hiappeventjstest:ActsHiAppeventTest",
      "hiappeventtest/hiappeventndktest:ActsHiappeventNdkTest",
      "hiappeventtest/hiappeventpamtest:ActsHiAppEventPamTest",
      "hiappeventtest/hiappeventsubjstest:ActsHiAppeventSubTest",
      "hiappeventtest/hiappeventetsteststatic:ActsHiAppEventStaticTest",
      "hicheckertest/hicheckerjstest:hicheckerjstest",
      "hicheckertest/hicheckerteststatic:ActsHicheckerStaticTest",
      "hicheckertest/jsleakwatchertest:ActsJsLeakWatcherTest",
      "hicollietest/hicolliendktest:ActsHicollieTest",
      "hidebugtest/hidebugtestcoltest:ActsHiDebugColTest",
      "hidebugtest/hidebugtestjstest:ActsHiDebugTest",
      "hidebugtest/hidebugtestnewtest:ActsHiDebugNewTest",
      "hidebugtest/hidebugtestrawtest:ActsHidebugrawTest",
      "hidebugtest/hidebugtestteststatic:ActsHiDebugStaticTest",
      "hilogndktest:ActsHilogNdkTest",
      "hilogtest/hilogdomainofftest:ActsHilogDomainOffJsTest",
      "hilogtest/hilogdomainontest:ActsHilogDomainOnJsTest",
      "hilogtsteststatic:ActsHilogStaticTest",
      "hisyseventtest/hisyseventboxtest:ActsHiSysEventBoxTest",
      "hisyseventtest/hisyseventjstest:ActsHiSysEventJsTest",
      "hisyseventtest/hisyseventnormaltest:ActsHiSysEventNormalTest",
      "hisyseventtest/hisyseventsertest:ActsHiSysEventSerTest",
      "hitracechainjstest:ActsHiTraceChainJsTest",
      "hitracechainteststatic:ActsHiTraceChainJsStaticTest",
      "hitracemetertest:ActsHitraceMeterTest",
      "hitracendktest:ActsHitraceNdkTest",
      "hitracemeterteststatic:ActsHitraceMeterStaticTest",
      "hitracetestnewtest:ActsHiTraceNewTest",
      "hiview/faultlogger/faultloggerjs:faultloggerjs_test",
    ]
  }
}
