# Copyright (C) 2023-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//test/xts/tools/build/suite.gni")

group("storage") {
  testonly = true
  if (is_standard_system) {
    deps = [
      "backupextensiontest:backupextension_js_test",
      "backupextensionteststatic:backupextension_js_test_static",
      "storagebackupextensionjstest:storagebackupextension_js_test",
      "storageclouddiskndktest:ActsStorageCloudDiskNdkTest",
      "storagedownloadcloudsyncjstest:storagedownloadcloudsync_js_test",
      "storagedownloadcloudsyncjsteststatic:storagedownloadcloudsync_js_test_static",
      "storageenvironmentjstest:storageenvironment_js_test",
      "storageenvironmentjsteststatic:storageenvironment_js_test_static",
      "storageenvironmentndktest:ActsStorageEnvironmentNdkTest",
      "storagefileioerrorjstest:storagefileioerror_js_test",
      "storagefileiojstest:storagefileio_js_test",
      "storagefileiondktest:ActsStorageFileioNdkTest",
      "storagefileiov9jstest:storagefileiov9_js_test",
      "storagefileiov9jsteststatic:storagefileiov9_js_test_static",
      "storagefilejstest:storagefile_js_test",
      "storagefilemanagementtest:ActsStorageFileManagementTest",
      "storagefilesharejstest:storagefileshare_js_test",
      "storagefilesharejsteststatic:storage_file_share_js_test_static",
      "storagefilesharendktest:ActsStorageFileshareNdkTest",
      "storagefileurijstest:storagefileuri_js_test",
      "storagefileurijsteststatic:storagefileuri_js_test_static",
      "storagefileurindktest:ActsStorageFileUriNdkTest",
      "storagenopermissionjstest:storagenopermission_js_test",
      "storagepcpickerjstest:storagepcpicker_js_test",
      "storagepickerjstest:storagepicker_js_test",
      "storagesecuritylabeljstest:storagesecuritylabel_js_test",
      "storagesecuritylabeljsteststatic:storagesecuritylabel_js_test_static",
      "storagestatfsjstest:storagestatfs_js_test",
      "storagestatfsjsteststatic:storagestatfs_js_test_static",
      "storagestatisticsjstest:storagestatistics_js_test",
      "storagestatisticsteststatic:storage_statistics_test_static"
    ]
  }
}
